--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="keywords"
           content="one page,single page,bootstrap,mobile,app,apps,twitter bootstrap,node,node.js,portal,node starter,node template,twitter bootstrap,bootstrap,site,template,node blog,node app,site,cross,cross platform,web or mobile,responsive,boilerplate,html,javascript,css">
 
-    <script src="/codemirror/lib/codemirror.js"></script>
+    <script src="codemirror/lib/codemirror.js"></script>
     <link rel="stylesheet" href="/codemirror/lib/codemirror.css">
-    <script src="/codemirror/mode/css/css.js"></script>
-    <script src="/codemirror/mode/javascript/javascript.js"></script>
-    <script src="/codemirror/mode/xml/xml.js"></script>
-    <script src="/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+    <script src="codemirror/mode/css/css.js"></script>
+    <script src="codemirror/mode/javascript/javascript.js"></script>
+    <script src="codemirror/mode/xml/xml.js"></script>
+    <script src="codemirror/mode/htmlmixed/htmlmixed.js"></script>
 
-    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 0px;
@@ -79,21 +79,21 @@
         }
 
     </style>
-    <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="/bootstrap/img/favicon.ico">
-    <link rel="apple-touch-icon" href="/bootstrap/img/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/bootstrap/img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/bootstrap/img/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="bootstrap/img/favicon.ico">
+    <link rel="apple-touch-icon" href="bootstrap/img/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="bootstrap/img/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="bootstrap/img/apple-touch-icon-114x114.png">
 
     <!-- load jquery from google CDN, with a protocol relative URL; otherwise local if offline -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="bootstrap/js/jquery-1.7.1.min.js"><\/script>')</script>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <!--<script type="text/javascript" src="http://plugins.in1.com/scripts/socialist.js"></script>-->
     <script>
         function unspace(str) {
@@ -270,7 +270,7 @@
     <h2></h2>
 
     <div class="slide pull-center fill">
-        <img class="fill" src="/img/kidscraft.png"/>
+        <img class="fill" src="img/kidscraft.png"/>
     </div>
 
 </section>
@@ -362,7 +362,7 @@
 
         <ul class="thumbnails">
             <li class="thumbnail">
-                <a href="/img/24_08_2013/mr_3.jpg" target="_blank"><img src="/img/24_08_2013/mr_3.jpg"
+                <a href="img/24_08_2013/mr_3.jpg" target="_blank"><img src="img/24_08_2013/mr_3.jpg"
                                                                         alt=""/></a>
                 <h4>Gänget</h4>
             </li>
@@ -388,49 +388,49 @@
             <ul class="thumbnails">
                 <li class="span2">
                     <div class="thumbnail">
-                        <a href="/img/24_08_2013/pn_1.jpg" target="_blank"><img src="/img/24_08_2013/pn_1.jpg"
+                        <a href="img/24_08_2013/pn_1.jpg" target="_blank"><img src="img/24_08_2013/pn_1.jpg"
                                                                                 alt=""></a>
                         <h4>Karl Neubauer, 9 och Kevin Taverner 9</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <a href="/img/24_08_2013/pn_2.jpg" target="_blank"><img src="/img/24_08_2013/pn_2.jpg" alt="">
+                        <a href="img/24_08_2013/pn_2.jpg" target="_blank"><img src="img/24_08_2013/pn_2.jpg" alt="">
                         </a>
                         <h4>Fullt spelande</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <a href="/img/24_08_2013/pn_3.jpg" target="_blank"><img src="/img/24_08_2013/pn_3.jpg"
+                        <a href="img/24_08_2013/pn_3.jpg" target="_blank"><img src="img/24_08_2013/pn_3.jpg"
                                                                                 alt=""></a>
                         <h4>Visning av egna byggen på scen</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <a href="/img/24_08_2013/pn_4.jpg" target="_blank"><img src="/img/24_08_2013/pn_4.jpg" alt="">
+                        <a href="img/24_08_2013/pn_4.jpg" target="_blank"><img src="img/24_08_2013/pn_4.jpg" alt="">
                         </a>
                         <h4>På scen med mic</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <a href="/img/24_08_2013/pn_5.jpg" target="_blank"><img src="/img/24_08_2013/pn_5.jpg"
+                        <a href="img/24_08_2013/pn_5.jpg" target="_blank"><img src="img/24_08_2013/pn_5.jpg"
                                                                                 alt=""></a>
                         <h4>Konserthallen, STPLN</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <a href="/img/24_08_2013/mr_1.jpg" target="_blank"><img src="/img/24_08_2013/mr_1.jpg"
+                        <a href="img/24_08_2013/mr_1.jpg" target="_blank"><img src="img/24_08_2013/mr_1.jpg"
                                                                                 alt=""/></a>
                         <h4>Sticker parade från Malmö</h4>
                     </div>
                 </li>
                 <li class="span2">
                     <div class="thumbnail">
-                        <a href="/img/24_08_2013/mr_2.jpg" target="_blank"><img src="/img/24_08_2013/mr_2.jpg"
+                        <a href="img/24_08_2013/mr_2.jpg" target="_blank"><img src="img/24_08_2013/mr_2.jpg"
                                                                                 alt=""/></a>
                         <h4>Servrarna</h4>
                     </div>
