--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,7 @@
                 <ul class="nav" id="section-menu">
                     <li id="menuIntro"><a href="/#Intro" title="Hem">Hem</a></li>
                     <li id="menuVad"><a href="/#Vad" title="Vad">Vad</a></li>
+                    <li id="menuWhy"><a href="/#why" title="Vad">Varför</a></li>
                     <li id="menuOne"><a href="/#one" title="One">Kidscraft #1</a></li>
                     <li id="menuVem"><a href="/#Vem" title="Vem">Vem</a></li>
                     <li id="menuSponsorer"><a href="/#Sponsorer" title="Sponsorer">Sponsorer</a></li>
@@ -269,93 +270,125 @@
         <div class="span6 pull-center" style="text-align: left;">
             <h1>Vad är Kidscraft?</h1>
 
-            <p>Den 8:e Februari 2013 smäller det igen! Kidscraft "Ice" är LAN:et där 100 av Malmös craftigaste kids mellan 8 - 15 år
-                träffas
-                för att skapa nya världar tillsammans i ett av världens bästa spel. Kidscraft kommer att hållas på Stpln
-                i
-                Malmö. Eventet är helt gratis men kräver att du registrerar dig som medlem i var LAN-förening via en anmälningsavgift om 40 kronor
-                (detaljer följer), 
-                tar med dig egen dator och
-                Minecraft-användare (https://minecraft.net/store). Observera att det finns ett begränsat antal platser.</p>
-            <p>
-                Vi öppnar kön till Kidscraft "Ice" kl. 14.00 den 8. December 2013 på   
+            <p>Den 8:e Februari 2013 smäller det igen! Kidscraft "Ice" är LAN:et där Malmös craftigaste kids mellan 8 -
+                14 år träffas för att skapa nya världar tillsammans i ett av världens bästa spel. Kidscraft "Ice" kommer
+                att hållas på Stpln i Malmö.
             </p>
 
+            <p>För att delta på Kidscraft "Ice" krävs:
+            <ul>
+                <li>Medlemskap i föreningen (Första Kidscraft var helt gratis och vi vill gärna fortsätta hålla
+                    deltagaravgifterna så låga som möjligt. För att underlätta detta kommer vi inför eventet att starta
+                    upp en förening. Mer detaljer kommer senare).
+                </li>
+                <li>Egen dator (har du inte möjlighet att ta med en dator så hör av dig)
+                </li>
+                <li>Eget Minecraft-login (https://minecraft.net/store)
+                </li>
+            </ul>
+            </p>
+            <p>För att kunna beräkna platser och hur mycket utrymme vi kommer att behöva kommer vi att öppna en kö. De
+                som
+                står i kön kommer att erbjudas plats på Kidscraft när biljetterna släpps.</p>
+
+            <p>Vi öppnar kön till KidsCraft "Ice" <b>kl 14:00 den 8:e december 2013</b>
+            </p>
+
+            <p>(OBS! Kön är inte bindande. Begränsat antal platser.)</p>
+
             <p>
-                KOM IHÅG: Det är viktigt att du registrerar dig på Minecraft redan innan Kidscraft, det kan du göra här:
+                <b>KOM IHÅG</b>: Det är viktigt att du registrerar dig på Minecraft redan innan Kidscraft, det kan du
+                göra här:
                 <a href="https://minecraft.net/store">https://minecraft.net/store</a>.
             </p>
 
-            <h1>Varför arrangerar vi Kidscraft?</h1>
-
-            <p>Spelkultur är den snabbast växande formen av kulturutövande i Sverige. Enligt Statens medieråd spelar
-                över 80
-                procent av alla svenska barn och unga någon form av dator- eller tv-spel. Trots detta finns det extremt
-                få
-                LAN-event som riktar sig till just barn. Tillfällen där unga gamers skulle kunna få möjlighet att träffa
-                andra datorintresserade i sin egen ålder. Genom Kidscraft vill vi skapa en sådan mötesplats. En trygg
-                LAN-miljö för barn där kreativet och skapande samarbeten kan ligga i fokus.
-            </p>
-
-            <p>För personer som spelar datorspel är det ganska uppenbart hur kul och utvecklande deras spelande kan
-                vara.
-                Men tyvärr är inte synen på datorspelande lika okomplicerad. Datorspel har fått ett oförtjänt dåligt
-                rykte i
-                media och betraktas fortfarande med föräldravärldens skepsis. I den egenskapen är Kidscraft är ett
-                pioniärprojekt. Ett projekt som går ut på att visa att spel kan användas för att främja kreativitet och
-                samarbete. Som kan uppmärksamma föräldrar, kritiker och beslutsfattare om behovet av alternativa
-                mötesplatser för barn och vikten av att utgå ifrån ungas egna intressen för att stimulera informella
-                demokrati- och läroprocesser.
-            </p>
-
-            <h1> Varför Minecraft?</h1>
-
-            <p>Minecraft var ett världsfenomen redan innan spelet hade lanserats. Den öppna spelvärlden i kombination
-                med
-                ett
-                enkelt system för att skapa, utvecklas och uppleva äventyr, erbjuder spelare möjligheten att uttrycka
-                sig
-                kreativt samtidigt som de kan ha roligt och skapa tillsammans med andra. En kombination som utan tvekan
-                gjort
-                Minecraft till ett av världens mest populära spel.</p>
-
-            <p>Minecraft har till skillnad från många andra spel en låg åldersgräns, är lätt att sätta sig in i och ett
-                upplägg
-                som uppmuntrar till samarbete och kreativitet. Faktorer som gör att Minecraft lämpar sig väldigt väl för
-                att
-                arbeta med barn och unga. Det är också ett exemplariskt verktyg för att visa på informella
-                läroprocesser.
-            </p>
-
-            <h2>
-                Glöm inte att ta med
-            </h2>
-            <ul>
-
-                <li>din egen <b>dator</b> (Har du inte en egen dator? Hör av dig så fort du kan genom att mejla oss!)
-                </li>
-                <li>din <b>Minecraft-login</b></li>
-                <li>gärna en egen <b>förgreningskontakt</b> om du har en sån hemma!</li>
-                <li>om du har, en Ethernet <b>nätsladd</b> så att du får snabbara nätverk än om du surfar trådlöst.</li>
-            </ul>
-
-            <h2>Regler</h2>
-            <ul>
-                <li>Inget griefande</li>
-                <li>Spela bara minecraft, inga andra internet-spel</li>
-                <li>Använd bara de världar som finns uppsatta, inte dina egna, eftersom annars du tar med dig världen
-                    när du
-                    går.
-                </li>
-            </ul>
-
-            <p>Om du har tips, funeringar eller önskemål om server setups (till exempel - vill du spela på en
-                ScriptCraft
-                Server?),
-                byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig
-                med!
-            </p>
+            <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="cdtw" width="350" height="240"
+                    style="outline:none">
+                <param name="movie" value="http://countingdownto.com/c/w.swf"/>
+                <param name="flashvars" value="eid=421678"/>
+                <param name="allowscriptaccess" value="always"/>
+                <param name="bgcolor" value="#000000"/>
+                <embed name="cdtw" src="http://countingdownto.com/c/w.swf" flashvars="eid=421678"
+                       type="application/x-shockwave-flash" width="350" height="240" allowscriptaccess="always"
+                       bgcolor="#000000" style="outline:none"></embed>
+            </object>
+            <br/> <a href="https://www.eventbrite.com/e/kidscraft-ice-tickets-9591768237?ref=ecount" target="_blank">Anmälan</a>
         </div>
+    </div>
+</section>
+<section id="why" class="sec sec2 fill">
+    <div class="container">
+
+        <h1>Varför arrangerar vi Kidscraft?</h1>
+
+        <p>Spelkultur är den snabbast växande formen av kulturutövande i Sverige. Enligt Statens medieråd spelar
+            över 80
+            procent av alla svenska barn och unga någon form av dator- eller tv-spel. Trots detta finns det extremt
+            få
+            LAN-event som riktar sig till just barn. Tillfällen där unga gamers skulle kunna få möjlighet att träffa
+            andra datorintresserade i sin egen ålder. Genom Kidscraft vill vi skapa en sådan mötesplats. En trygg
+            LAN-miljö för barn där kreativet och skapande samarbeten kan ligga i fokus.
+        </p>
+
+        <p>För personer som spelar datorspel är det ganska uppenbart hur kul och utvecklande deras spelande kan
+            vara.
+            Men tyvärr är inte synen på datorspelande lika okomplicerad. Datorspel har fått ett oförtjänt dåligt
+            rykte i
+            media och betraktas fortfarande med föräldravärldens skepsis. I den egenskapen är Kidscraft är ett
+            pioniärprojekt. Ett projekt som går ut på att visa att spel kan användas för att främja kreativitet och
+            samarbete. Som kan uppmärksamma föräldrar, kritiker och beslutsfattare om behovet av alternativa
+            mötesplatser för barn och vikten av att utgå ifrån ungas egna intressen för att stimulera informella
+            demokrati- och läroprocesser.
+        </p>
+
+        <h1> Varför Minecraft?</h1>
+
+        <p>Minecraft var ett världsfenomen redan innan spelet hade lanserats. Den öppna spelvärlden i kombination
+            med
+            ett
+            enkelt system för att skapa, utvecklas och uppleva äventyr, erbjuder spelare möjligheten att uttrycka
+            sig
+            kreativt samtidigt som de kan ha roligt och skapa tillsammans med andra. En kombination som utan tvekan
+            gjort
+            Minecraft till ett av världens mest populära spel.</p>
+
+        <p>Minecraft har till skillnad från många andra spel en låg åldersgräns, är lätt att sätta sig in i och ett
+            upplägg
+            som uppmuntrar till samarbete och kreativitet. Faktorer som gör att Minecraft lämpar sig väldigt väl för
+            att
+            arbeta med barn och unga. Det är också ett exemplariskt verktyg för att visa på informella
+            läroprocesser.
+        </p>
+
+        <h2>
+            Glöm inte att ta med
+        </h2>
+        <ul>
+
+            <li>din egen <b>dator</b> (Har du inte en egen dator? Hör av dig så fort du kan genom att mejla oss!)
+            </li>
+            <li>din <b>Minecraft-login</b></li>
+            <li>gärna en egen <b>förgreningskontakt</b> om du har en sån hemma!</li>
+            <li>om du har, en Ethernet <b>nätsladd</b> så att du får snabbara nätverk än om du surfar trådlöst.</li>
+        </ul>
+
+        <h2>Regler</h2>
+        <ul>
+            <li>Inget griefande</li>
+            <li>Spela bara minecraft, inga andra internet-spel</li>
+            <li>Använd bara de världar som finns uppsatta, inte dina egna, eftersom annars du tar med dig världen
+                när du
+                går.
+            </li>
+        </ul>
+
+        <p>Om du har tips, funeringar eller önskemål om server setups (till exempel - vill du spela på en
+            ScriptCraft
+            Server?),
+            byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig
+            med!
+        </p>
+    </div>
     </div>
 
 </section>
