--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Kidscraft - Minecraft party for kids 9-14 in Malmö</title>
+    <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-          content="Kidscraft samlar barn i åldern 9-14 år för en spännande eftermiddag på stapeln den 24. Augusti 2013. Hej">
-    <meta name="keywords"
-          content="one page,single page,bootstrap,mobile,app,apps,twitter bootstrap,node,node.js,portal,node starter,node template,twitter bootstrap,bootstrap,site,template,node blog,node app,site,cross,cross platform,web or mobile,responsive,boilerplate,html,javascript,css">
-
+          content="Kidscraft samlar barn i åldern 8-14 år för en spännande eftermiddag på stapeln den 8. Februari 2014.">
     <style type="text/css">
         body {
             padding-top: 0px;
