changing countdown to queue

--- a/public/index.html
+++ b/public/index.html
@@ -299,17 +299,14 @@
                 <a href="https://minecraft.net/store">https://minecraft.net/store</a>.
             </p>
 
-            <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" id="cdtw" width="350" height="240"
-                    style="outline:none">
-                <param name="movie" value="http://countingdownto.com/c/w.swf"/>
-                <param name="flashvars" value="eid=421678"/>
-                <param name="allowscriptaccess" value="always"/>
-                <param name="bgcolor" value="#000000"/>
-                <embed name="cdtw" src="http://countingdownto.com/c/w.swf" flashvars="eid=421678"
-                       type="application/x-shockwave-flash" width="350" height="240" allowscriptaccess="always"
-                       bgcolor="#000000" style="outline:none"></embed>
-            </object>
-            <br/> <a href="https://www.eventbrite.com/e/kidscraft-ice-tickets-9591768237?ref=ecount" target="_blank">Anmälan</a>
+
+            <br/>
+
+            <div style="width:100%; text-align:left;">
+                <iframe src="http://www.eventbrite.com/tickets-external?eid=9591768237&ref=etckt&v=2" frameborder="0"
+                        height="400" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5"
+                        scrolling="auto" allowtransparency="true"></iframe>
+            </div>
         </div>
     </div>
 </section>
