updating image to Ice

--- a/public/index.html
+++ b/public/index.html
@@ -254,7 +254,9 @@
 
 <section id="Intro" class="sec sec1 pull-center">
     <div class="slide pull-center fill">
-        <img class="fill" src="img/kidscraft.png"/>
+        <img class="fill" src="img/kidscraft-ice.png"/>
+        <br/>
+        <div>Created by Kalle (minecraft <i>kalleneubauer</i>)</div>
     </div>
 
 </section>
