removing reg link

--- a/public/index.html
+++ b/public/index.html
@@ -290,10 +290,7 @@
                 som
                 står i kön kommer att erbjudas plats på Kidscraft när biljetterna släpps.</p>
 
-            <p>Vi öppnar kön till KidsCraft "Ice" <b>kl 14:00 den 8:e december 2013</b>
-            </p>
-
-            <p>(OBS! Kön är inte bindande. Begränsat antal platser.)</p>
+            <p><b>(OBS! Alla plaster för tillfället slutsålda, tyvärr.)</b></p>
 
             <p>
                 <b>KOM IHÅG</b>: Det är viktigt att du registrerar dig på Minecraft redan innan Kidscraft, det kan du
@@ -304,11 +301,11 @@
 
             <br/>
 
-            <div style="width:100%; text-align:left;">
+            <!--<div style="width:100%; text-align:left;">
                 <iframe src="http://www.eventbrite.com/tickets-external?eid=9591768237&ref=etckt&v=2" frameborder="0"
                         height="400" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5"
                         scrolling="auto" allowtransparency="true"></iframe>
-            </div>
+            </div>-->
         </div>
     </div>
 </section>
