--- a/public/index.html
+++ b/public/index.html
@@ -208,6 +208,7 @@
                     <li id="menuKontakt"><a href="/#Kontakt" title="Kontakt">Kontakt</a></li>
                 </ul>
             </div>
+            <a class="brand" href="/faq.html" title="FAQ">FAQ</a>
         </div>
     </div>
 </div>
