--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
             <div class="nav-collapse" id="main-menu">
                 <ul class="nav" id="section-menu">
-                    <li id="menuIntro"><a href="/#Intro" title="Hem">Hem</a></li>
+                    <li id="menuIntro"><a href="/#Intro" title="Hem">Hemtest</a></li>
                     <li id="menuVad"><a href="/#Vad" title="Vad">Vad</a></li>
                     <li id="menuOne"><a href="/#one" title="One">Kidscraft #1</a></li>
                     <li id="menuVem"><a href="/#Vem" title="Vem">Vem</a></li>
