Updated info. Again!

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=devSPACE-width, initial-scale=1.0">
     <meta name="description"
-          content="Kidscraft samlar barn i åldern 8-14 år för en spännande eftermiddag på stapeln den 8. Februari 2014.">
+          content="Kidscraft samlar barn i åldern 8-14 år för en spännande eftermiddag på stapeln den 8. Februari 2015.">
     <style type="text/css">
         body {
             padding-top: 0px;
@@ -68,14 +68,14 @@
         }
 
 		.left {
-		   background: url(dirt.png);
+		   //background: url(dirt.png);
 		   width: 15%;
 		   position: absolute;
 		   left: 0px;
 		   height: 100%;
 		}
 		.right {
-		   background: url(dirt.png);
+		   //background: url(dirt.png);
 		   width: 15%;
 		   position: absolute;
 		   right: 0px;
@@ -210,7 +210,7 @@
 <div class="right">
 </div>
 
-<body background="img\dirt.png">
+<body background="">
 <div class="middle">
 
 <div class="navbar navbar-fixed-top">
@@ -225,7 +225,7 @@
 
             <div class="nav-collapse" id="main-menu">
                 <ul class="nav" id="section-menu">
-                    <li id="menuIntro"><a href="/#Intro" title="Hem">Hemtest</a></li>
+                    <li id="menuIntro"><a href="/#Intro" title="Hem">Hem</a></li>
                     <li id="menuVad"><a href="/#Vad" title="Vad">Vad</a></li>
                     <li id="menuWhy"><a href="/#why" title="Vad">Varför</a></li>
                     <li id="menuOne"><a href="/#one" title="One">Kidscraft #1</a></li>
@@ -281,9 +281,10 @@
 
 <section id="Intro" class="sec sec1 pull-center">
     <div class="slide pull-center fill">
-        <img class="fill" src="img/kidscraft-ice.png"/>
+	<br>
+        <img class="fill" src="img/kidscraft.png"/ style="width:100%; width:auto;">
         <br/>
-        <div>Created by Kalle (minecraft <i>kalleneubauer</i>)</div>
+        <div></div>
     </div>
 
 </section>
@@ -296,12 +297,12 @@
         <div class="span6 pull-center" style="text-align: left;">
             <h1>Vad är Kidscraft?</h1>
 
-            <p>Den 8:e Februari 2014 smäller det igen! Kidscraft "Ice" är LAN:et där Malmös craftigaste kids mellan 8 -
-                14 år träffas för att skapa nya världar tillsammans i ett av världens bästa spel. Kidscraft "Ice" kommer
-                att hållas på Stpln i Malmö.
+            <p>Är du mellan 8-14 år och älskar Minecraft lika mycket som vi gör? Då bör du komma till Kidscraft SPACE 8 februari 2015, LAN:et där kidsen bestämmer! För fjärde gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
+Som förälder har ni dessutom chansen att delta på en gratis föreläsning om datorspel, e-sport och ungas spelande av Ronja Nordström från Sthlm e-sport och e-sportkommentatorn Sang Lee.
+Föreläsningen börjar kl. 13.00
             </p>
 
-            <p>För att delta på Kidscraft "Ice" krävs:
+            <p>För att delta på Kidscraft "SPACE" krävs:
             <ul>
                 <li>Medlemskap i föreningen (Första Kidscraft var helt gratis och vi vill gärna fortsätta hålla
                     deltagaravgifterna så låga som möjligt. För att underlätta detta kommer vi inför eventet att starta
@@ -316,8 +317,6 @@
             <p>För att kunna beräkna platser och hur mycket utrymme vi kommer att behöva kommer vi att öppna en kö. De
                 som
                 står i kön kommer att erbjudas plats på Kidscraft när biljetterna släpps.</p>
-
-            <p><b>(OBS! Alla plaster för tillfället slutsålda, tyvärr.)</b></p>
 
             <p>
                 <b>KOM IHÅG</b>: Det är viktigt att du registrerar dig på Minecraft redan innan Kidscraft, det kan du
