--- a/public/index - Copy.html
+++ b/public/index - Copy.html
@@ -225,7 +225,7 @@
 
             <div class="nav-collapse" id="main-menu">
                 <ul class="nav" id="section-menu">
-                    <li id="menuIntro"><a href="/#Intro" title="Hem">Hemtest</a></li>
+                    <li id="menuIntro"><a href="/#Intro" title="Hem">Hem</a></li>
                     <li id="menuVad"><a href="/#Vad" title="Vad">Vad</a></li>
                     <li id="menuWhy"><a href="/#why" title="Vad">Varför</a></li>
                     <li id="menuOne"><a href="/#one" title="One">Kidscraft #1</a></li>
