--- a/newpage.html
+++ b/newpage.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+	<meta charset="utf-8">
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
-    
-    <!-- import Google font -->
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     
     <style>
 	
