--- a/newpage.html
+++ b/newpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
 	<meta charset="utf-8">
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
