--- a/newpage.html
+++ b/newpage.html
@@ -2,6 +2,7 @@
 <html lang="sv">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="content-language" content="SV" />
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
     
     <style>
