Now swedish sould work...

--- a/newpage.html
+++ b/newpage.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="content-language" content="SV" />
+	<meta http-equiv="content-type" content="text/html" charset="ISO-8859-1" />
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
     
     <style>
