--- a/newpage.html
+++ b/newpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html" charset="ISO-8859-1" />
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
