--- a/newpage.html
+++ b/newpage.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="content-type" content="text/html" charset="ISO-8859-1" />
+	<meta charset="utf-8">
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
-    
+    <meta name="viewport" content="width=devSPACE-width, initial-scale=1.0">
+    <meta name="description"
+          content="Kidscraft samlar barn i åldern 8-14 år för en spännande eftermiddag på stapeln den 8. Februari 2015.">
     <style>
 	
 	.body{
