--- a/newpage.html
+++ b/newpage.html
@@ -55,7 +55,13 @@
         }
         
     </style>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="bootstrap/js/bootstrap-transition.js"></script>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
 </head>
 
